# log-parser

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
src/: log_classification.rs  main.rs  model.rs  regex_pattern.rs  test.rs
