[package]
name = "log-parser"
version = "0.1.0"
edition = "2021"
authors = ["aizr1"]
description = "Simple log parser for fitbit-cli logs. Extract Various data from the logs to CSV."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
chrono = { version = "0.4.23", features = [
    "serde"
] }
csv = "1.1.6"
serde = { version = "1.0.147", features = [
    "serde_derive"
] }
clap = { version = "4.0.26", features = ["derive"] }